<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.widget.CardView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/card_standings"
    android:layout_width="match_parent"
    android:layout_height="60dp"
    app:cardElevation="8dp"
    app:cardCornerRadius="8dp">

    <android.support.constraint.ConstraintLayout
        android:id="@+id/standings_tabs_row"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:padding="5dp"
        android:layout_gravity="center"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf= "parent"
        app:layout_constraintBottom_toBottomOf ="parent">
        <TextView
            android:id="@+id/team_numbers"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/number"
            android:textSize="16sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"/>

        <TextView
            android:id="@+id/team_name"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginEnd="8dp"
            android:gravity="center"
            android:paddingStart="5dp"
            android:paddingEnd="5dp"
            android:text="@string/team"
            android:textSize="16sp"
            android:textColor="@color/linksColor"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/played_games"
            app:layout_constraintStart_toEndOf="@id/team_numbers"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/played_games"
            android:layout_width="25dp"
            android:layout_height="wrap_content"
            android:text="@string/pl"
            android:textSize="16sp"
            android:gravity="center"
            app:layout_constraintEnd_toStartOf="@id/games_won"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"/>

        <TextView
            android:id="@+id/games_won"
            android:layout_width="25dp"
            android:layout_height="wrap_content"
            android:text="@string/w"
            android:textSize="16sp"
            android:gravity="center"
            app:layout_constraintEnd_toStartOf="@id/games_draw"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"/>

        <TextView
            android:id="@+id/games_draw"
            android:layout_width="25dp"
            android:layout_height="wrap_content"
            android:text="@string/d"
            android:textSize="16sp"
            android:gravity="center"
            app:layout_constraintEnd_toStartOf="@id/games_lost"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"/>

        <TextView
            android:id="@+id/games_lost"
            android:layout_width="25dp"
            android:layout_height="wrap_content"
            android:text="@string/l"
            android:textSize="16sp"
            android:gravity="center"
            app:layout_constraintEnd_toStartOf="@id/goals_for"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"/>

        <TextView
            android:id="@+id/goals_for"
            android:layout_width="25dp"
            android:layout_height="wrap_content"
            android:text="@string/f"
            android:textSize="16sp"
            android:gravity="center"
            app:layout_constraintEnd_toStartOf="@id/goals_against"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"/>

        <TextView
            android:id="@+id/goals_against"
            android:layout_width="25dp"
            android:layout_height="wrap_content"
            android:text="@string/a"
            android:textSize="16sp"
            android:gravity="center"
            app:layout_constraintEnd_toStartOf="@id/goals_difference"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"/>

        <TextView
            android:id="@+id/goals_difference"
            android:layout_width="25dp"
            android:layout_height="wrap_content"
            android:text="@string/gd"
            android:textSize="16sp"
            android:gravity="center"
            app:layout_constraintEnd_toStartOf="@id/points"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"/>


        <TextView
            android:id="@+id/points"
            android:layout_width="25dp"
            android:layout_height="wrap_content"
            android:text="@string/pts"
            android:textSize="16sp"
            android:gravity="center"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"/>


    </android.support.constraint.ConstraintLayout>


</android.support.v7.widget.CardView>