<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.widget.CardView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_height="180dp"
    android:layout_width="match_parent"
    android:id="@+id/card_item_competition"
    app:cardCornerRadius="8dp"
    app:cardElevation="8dp"
    android:padding="4dp">

    <android.support.constraint.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">


        <TextView
            android:id="@+id/country_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:padding="10dp"
            android:text="Blablabla"
            android:textSize="16sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toStartOf="@id/image_main_list"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/competition_name" />

        <TextView
            android:id="@+id/s_date"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/start_date"
            android:textSize="16sp"
            android:textStyle="bold"
            android:paddingStart="10dp"
            app:layout_constraintBottom_toTopOf="@id/start_day_value"
            app:layout_constraintStart_toStartOf="parent"

            />

        <TextView
            android:id="@+id/start_day_value"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/start_date"
            android:textSize="16sp"
            android:textStyle="italic"
            android:paddingStart="10dp"
            app:layout_constraintBottom_toTopOf="@id/line_long"
            app:layout_constraintStart_toStartOf="parent" />

        <ImageView
            android:id="@+id/image_main_list"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:layout_marginEnd="120dp"
            app:layout_constraintBottom_toTopOf="@id/line_long"
            app:layout_constraintEnd_toEndOf="parent"
            app:srcCompat="@drawable/ball_classik"
            tools:ignore="MissingConstraints" />

        <TextView
            android:id="@+id/status_value"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@color/backgroundRed"
            android:padding="10dp"
            android:text="@string/status"
            android:textColor="#ffffff"
            android:textSize="22sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/competition_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:padding="10dp"
            android:text="@string/app_name"
            android:textSize="24sp"
            android:textStyle="bold|italic"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/d_end"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:text="@string/end_date"
            android:textSize="16sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toTopOf="@id/date_end_value"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/image_main_list" />

        <TextView
            android:id="@+id/date_end_value"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingEnd="5dp"
            android:text="@string/end_date"
            android:textSize="16sp"
            android:textStyle="italic"
            app:layout_constraintBottom_toTopOf="@id/line_long"
            app:layout_constraintEnd_toEndOf="parent" />
        <TextView
            android:id="@+id/line_long"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:text="______________________________________________________"/>

    </android.support.constraint.ConstraintLayout>
</android.support.v7.widget.CardView>